# laser_ugv_system

./: README.md  README_Main.md  install_robot_simulation.sh  readme.html  setup_enviroment.sh
install/: setup.bash  (+4 more)
ugv_navigation/: CMakeLists.txt  package.xml
ugv_robots_descriptions/: CMakeLists.txt  package.xml
ugv_robots_descriptions/launch/: l1br_description_launch.py  l1br_minimal.launch  oni_description_launch.py  oni_minimal.launch  robots_spaw.py
ugv_robots_descriptions/robots_description/: l1br.urdf.xacro  oni.urdf.xacro
ugv_robots_descriptions/robots_description/controller/: omni_drive.urdf.xacro
ugv_robots_descriptions/robots_description/controller/control_params/: l1br_control_params.yaml
ugv_robots_descriptions/robots_description/l1br/config/: l1br_control.yaml  rviz_config.rviz
ugv_robots_descriptions/robots_description/l1br/launch/: l1br.launch.py
ugv_robots_descriptions/robots_description/l1br/urdf/: l1br.urdf.xacro  l1br_diff_drive_control.urdf.xacro
ugv_robots_descriptions/robots_description/meshes/l1br_meshes/: tray.dae  wheel.dae
ugv_robots_descriptions/robots_description/oni/urdf/: oni.urdf.xacro  oni_omni_drive_control.urdf.xacro
ugv_robots_descriptions/robots_description/sensors/: imu_sensor.urdf.xacro  laser_sensor.urdf.xacro
ugv_robots_descriptions/rviz/: rviz_minimal_visualization_config.rviz  rviz_minimal_visualization_l1br_config.rviz  rviz_minimal_visualization_oni_config.rviz
ugv_simulation/: CMakeLists.txt  package.xml
ugv_simulation/config/: ekf_l1br.yaml  ekf_oni.yaml
ugv_simulation/launch/: teleop_l1br_launch.py  world_launch.launch  world_launch.py
(+64 files in other folders)
