<?xml version="1.0"?>
<package format="2">
  <name>ugv_navigation</name>
  <version>0.0.0</version>
  <description>The ugv_navigation package</description>

  <maintainer email="gabriel@todo.todo">gabriel</maintainer>
  
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

</package>
