<?xml version="1.0"?>
<package format="2">
  <name>ugv_robots_descriptions</name>
  <version>0.0.0</version>
  <description>The ugv_robots_descriptions package</description>

  <maintainer email="joao.gabriel.silva.santos@academico.ufpb.br">João Gabriel</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
